# ToDo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/model/: mod.rs  priority.rs  task.rs  todoList.rs  todo_list.rs
src/service/: actions.rs  line_editor.rs  manager.rs  menu_option.rs  mod.rs
src/ui/: displayer.rs  displayer_trait.rs  line_editor.rs  mod.rs
src/ui/cli_argument_parser/: cli_displayer.rs  cli_parser.rs  trait_cli_displayer.rs
src/ui/console_ui/: console_displayer.rs  generic_console_displayer.rs  menu_option.rs  menu_options.rs  mock_displayer.rs  mod.rs
tests/: integration.rs  mod.rs
tests/model/: todo_list.rs
tests/ui/cli_argument_parser/: cli_parser.rs
tests/ui/console_ui/: generic_console_displayer.rs
