[package]
name = "to_do"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "ToDo"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.5", features = ["derive"] }
rustyline = "17.0.1"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0.17"
